# SocratiCode

./: .gitignore  README.md  README_old.md  README_test.md  docker-compose.yml  ejemplos_peticiones.txt  implementation_plan_piston.md  main.py  mejoras_chat.md  pasar_produccion.md  propuestas.md  pyproject.toml
backend/: .coverage
backend/config/: exceptions.py  settings.py  tests.py  urls.py
docs/: .gitignore  TFG_Ignacio_Garcia_Hernanz.ist  TFG_Ignacio_Garcia_Hernanz.tex  bibliografia.bib  tfgtfmthesisuam.glsdefs  tfgtfmthesisuam.idx  tfgtfmthesisuam.loe  tfgtfmthesisuam.lof  tfgtfmthesisuam.lol  tfgtfmthesisuam.ltb  tfgtfmthesisuam.xdy
docs/analisis_diseno/: analisis_diseno.tex  arquitectura.tex  casos_uso.tex  conclusiones.tex  descripcion_sistema.tex  metodologia.tex  modelo_datos.tex  requisitos.tex  requisitos_funcionales.tex  requisitos_no_funcionales.tex
docs/apendices/: diagramas.tex  interfaces.tex  system_prompt.tex
docs/conclusiones_futuro/: conclusiones.tex  trabajo_futuro.tex
docs/desarrollo_implementacion/: administracion.tex  backend.tex  (+14 more)
extra_docs/: CS50.md  CS50ai_vs_CodeAi.md  CodeAid.md  Cuestiones.txt  Piston_vs_Pyodide.md  SSE_secuence.md  explicacion_piston.md  implementation_plan_front.md  implementation_plan_moderacion_output.md  indice_estado_arte.md  indice_inicial_memoria.md  instalar_lenguajes_piston.md  mejoras_chat.md  modelos_comp.csv  payload.md  pruebas_piston.md  walkthrough_front.md  walkthrough_moderar_output.md
frontend/: index.html  package-lock.json  package.json  vite.config.js  vitest.config.js
marca/: brief.md
(+257 files in other folders)
