[project]
name = "socraticode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.3",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "djoser>=2.3.3",
    "ollama>=0.6.1",
    "psycopg2-binary>=2.9.11",
    "uvicorn>=0.34.0",
    "adrf>=0.1.8",
]
